--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Alpha3
	- Fixed problem where Add to Playlist from mpd.php only works for 
		file method
	- Added 'Simple' Genre Bar (Thx sigger)
	- Added initial TV page for viewing of nowplaying and additional 
		information (Thx sigger)
	- Updated Archive library to 2.1 Released 08/13/2005
	- Corrected math error with automagic downsampling (Thx J)
	- Corrected some of the no_auth preference problems
	- Fixed a problem where Clearing the catalog stats, didn't actually
		do anything
	- Fixed a slight logic error that could give a weird error when 
		you attempted to create two users with the same username
	- Removed the last of the short php tags
	- Reworked Search to allow for multiple searches, and eventually
		allow you to return a list of albums,artist,genres
		rather than a list of songs. 
	- Fixed Lock Songs always returning false and thus preventing
		any playback when enabled. (Thx J)
	- Fixed a flaw in the downsampling which would allow you to set
		invalid bitrates. (Thx J)
	- Fixed a few problems with WMP, downsampling and now playing
		information. This is not a final fix for WMP but it's
		better than before. 
	- Fixed problem where played wasn't getting set correctly. 
	- Fixed a problem where you could enter invalid bitrates into 
		the preferences, and cleaned up logic
	- Fixed a problem with Real Player Tag detection (hack)
	- Added RAM playlist type
	- Added ability for Admin's to view other users personal stats
	- Fixed a problem with the Apply to All checkbox on admin
		preferences

  
--------------------------------------------------------------------------
  v.3.3.2-Alpha2 08/14/2005
  	- Improved MPD URL method so it acts just like file method 