@@ -4,8 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Alpha3
+  	- Added transcoding of m4a files so they stream properly 
+		(Thx Rosensama)
 	- Fixed problem where Add to Playlist from mpd.php only works for 
-		file method
+		file method (Thx Rosensama)
 	- Added 'Simple' Genre Bar (Thx sigger)
 	- Added initial TV page for viewing of nowplaying and additional 
 		information (Thx sigger)
